# The-Number1c-Rac1ng

./: .gitignore
devel/: .catkin  .rosinstall  setup.sh
devel/include/Team503/: traffic_sign_msg.h
devel/include/mastering_ros_demo_pkg/: demo_msg.h  demo_srvRequest.h  demo_srvResponse.h
devel/include/test_msgs/: my_file.h
devel/include/traffic_sign/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h  BadTwoInts.h  BadTwoIntsRequest.h  BadTwoIntsResponse.h  traffic_sign.h  traffic_sign_msg.h
devel/lib/Team1/: lane_detect
devel/lib/Team503/: Team503  Team503_node  lane_detect
devel/lib/file_server/: file_server
devel/lib/lane_detect/: lane_detect
devel/lib/mastering_ros_demo_pkg/: demo_msg_publisher  demo_msg_subscriber  demo_topic_publisher  demo_topic_subscriber  image_transport_subscriber
devel/lib/pkgconfig/: Team1.pc  Team503.pc  file_server.pc  lane_detect.pc  mastering_ros_demo_pkg.pc  test_msgs.pc  traffic_sign.pc  video_stream.pc
devel/lib/video_stream/: video_stream
src/Team503/: CMakeLists.txt  requirement.txt  setup.py
src/Team503/launch/: Team503.launch  lane_detect.launch  traffic_sign.launch
src/file_server/launch/: file_server.launch
src/team503/: CMakeLists.txt  package.xml  setup.py
src/tmp/: untitled.py
src/traffic_sign/: CMakeLists.txt  package.xml  setup.py
src/traffic_sign/launch/: traffic_sign.launch
src/traffic_sign/src/: CNN_3channels_1conv.py  detect_traffic_sign  main.py
src/traffic_sign/src/cnn/: CNN_3channels_1conv.py  load_data.py  phan_doan_mau.py
src/traffic_sign/src/model/: 3cnn_1conv_10epoch_s28.ckpt.index
src/traffic_sign/srv/: traffic_sign_srv.srv
src/unity/: logfile_Team1.txt
(+86 files in other folders)
